# linux_commands_rewritten_in_rust

./: .gitignore  Cargo.toml  README.md  database_config.toml.example
.cargo/: config.toml  config.toml.example
docs/: system_call_notes.md
examples/: ffi_c_extern_global_and_traverse_environ.rs  get_default_route_ip_and_mac.rs  get_default_route_network_interface_mac_address.rs  get_disk_uuid.rs  getrusage.rs  hot_reload_config_file_using_signal.rs  segfault_opendir_open_null.rs  sigabrt_closedir_wrong.rs  sigabrt_free_dylib_data.rs  sigbus_mmap_offset_struct_empty_file.rs  sigret_mmap_offset_u8_to_empty_file.rs  sigret_mmap_offset_u8_to_empy_file.rs  sigsegv_opendir_open_null.rs  simd.rs  simd_crc_as_hash_or_ping_icmp.rs  std_into_try_into_type_annotation.rs
examples/ffi_c_extern_global_to_rust_static/: build.rs  main.rs
src/: errno.rs  file_system.rs  lib.rs  macros.rs  misc_syscall.rs  network.rs  strftime.rs  system_call.rs  time.rs
src/database/: database_config.rs  mod.rs  service_handler.rs
src/database/adapters/: dbm.rs  fread_fwrite_struct.rs  mmap.rs  mod.rs  mysql.rs
src/database/models/: user.rs
src/dylibs_binding/: crypto.rs  curses.rs  dbm.rs  event.rs  gdbm_compat.rs  mod.rs  mysqlclient.rs  readline.rs  sqlite3.rs
src/file_system/: mod.rs  syscall.rs
src/file_system/parser/: mod.rs
src/file_system/parser/etc/: fstab.rs  mod.rs
src/file_system/parser/proc/net/: ipv6_route.rs  route.rs
