# cargo-features = ["edition2021"]
[package]
name = "linux_commands_rewritten_in_rust"
version = "0.1.0"
# edition = "2021"
edition = "2018"

[dependencies]
libc = "0.2"

[dev-dependencies]
# toml and serde is only used to read database config file
toml = "0.5"
serde = { version="1.0", features=["derive"] }
